Addressing PR comments…
- Moved caret colour style to be a global change
- Added comment explaining search dropdown offset
- Revert some style changes:
    - Disabled components
    - Filter pill hovers

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -206,6 +206,10 @@ option {
   font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
 }
 
+input[type='text'] {
+  caret-color: var(--theme-accent-primary);
+}
+
 input[type='search'] {
   appearance: textfield;
 }
@@ -223,6 +227,7 @@ textarea {
   font-size: inherit;
   // Setting this makes yuku/textcomplete faster because it doesn't need to make a fake element to measure line height (incorrectly, too)
   line-height: calc(16 / 12);
+  caret-color: var(--theme-accent-primary);
 }
 
 select {
