--- a/src/app/dim-ui/FilterPills.m.scss
+++ b/src/app/dim-ui/FilterPills.m.scss
@@ -32,7 +32,7 @@
 
   @media (hover: hover) {
     &:hover {
-      border-color: var(--theme-accent-primary) !important;
+      border-color: rgba(255, 255, 255, 0.3);
     }
   }
 
