Use theme accent color for radio + range inputs

--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -214,6 +214,11 @@ input[type='search'] {
   appearance: textfield;
 }
 
+input[type='range'],
+input[type='radio'] {
+  accent-color: var(--theme-accent-primary);
+}
+
 textarea {
   width: 100%;
   height: 30px;
