--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -8,6 +8,10 @@
 @use 'variables.scss' as *;
 @use 'theme';
 @use 'theme-dark';
+@use 'theme-neomuna';
+@use 'theme-throneworld';
+@use 'theme-vexnet';
+@use 'theme-europa';
 
 @font-face {
   font-family: 'Destiny Symbols';
