--- a/src/app/issue-awreness-banner/Game2Give.m.scss
+++ b/src/app/issue-awreness-banner/Game2Give.m.scss
@@ -1,4 +1,4 @@
-@import '../_variables.scss';
+@import '../variables.scss';
 
 :global(.issue-awareness-active .inventory-content) {
   margin-bottom: 150px;
@@ -41,15 +41,15 @@
       background-color: #e8a534;
       padding: 0.125rem 0.25rem;
       word-wrap: normal;
-      background-image: -webkit-linear-gradient(
+      background-image: linear-gradient(
           -45deg,
           transparent 33%,
           rgba(0, 0, 0, 0.1) 33%,
           rgba(0, 0, 0, 0.1) 66%,
           transparent 66%
         ),
-        -webkit-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25)),
-        -webkit-linear-gradient(left, #ac7b28, #e8a534);
+        linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25)),
+        linear-gradient(left, #ac7b28, #e8a534);
       border-radius: 2px;
       background-size: 35px 100%, 100% 100%, 100% 100%;
     }
