--- a/src/app/inventory-page/DesktopStores.m.scss
+++ b/src/app/inventory-page/DesktopStores.m.scss
@@ -3,9 +3,8 @@
 .buttons {
   display: grid;
   grid-template-rows: 46px 1fr;
-  padding: 16px 0 6px 0;
+  padding: 16px var(--inventory-column-padding) 6px 0;
   align-items: center;
-  width: 70px;
 }
 
 .singleCharacterButton {
