--- a/src/app/issue-awareness-banner/Game2Give.m.scss
+++ b/src/app/issue-awareness-banner/Game2Give.m.scss
@@ -5,17 +5,14 @@
 }
 
 .issueAwarenessBanner {
-  position: fixed;
-  bottom: -1px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 700px;
+  width: 573px;
   z-index: 5;
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
   transition: opacity 0.5s ease-in-out;
+  margin-top: 16px;
 }
 
 .item {
@@ -53,7 +50,6 @@
 }
 
 .thermo {
-  font-size: 1rem;
   background-color: dimgrey;
   display: flex;
 }
