--- a/src/app/loadout/loadout-edit/LoadoutEditBucket.m.scss
+++ b/src/app/loadout/loadout-edit/LoadoutEditBucket.m.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   gap: var(--item-margin);
+  flex: 1;
 
   :global(.stat-row) {
     justify-content: space-between;
