--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -8,6 +8,7 @@
 @use 'variables.scss' as *;
 @use 'theme';
 @use 'theme-pyramid';
+@use 'theme-classic';
 @use 'theme-neomuna';
 @use 'theme-throneworld';
 @use 'theme-vexnet';
