Make ‘new’ notification dot a variable + always red

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -6,6 +6,7 @@ $red: #ff3232; // For warnings/errors
 $green: #51a351; // For success statuses or positive deltas
 $stat-modded: #68a0b7; // For highlighting the difference in modded item stats
 $stat-masterworked: #e8a534;
+$new-notification-dot: #cf0707;
 
 // Blue used to denote community-provided data
 $communityBlue: #0d7fad;
