--- a/src/app/inventory/NewItemIndicator.m.scss
+++ b/src/app/inventory/NewItemIndicator.m.scss
@@ -4,7 +4,7 @@
   display: block;
   width: calc(var(--item-size) * 0.08);
   height: calc(var(--item-size) * 0.08);
-  border: calc(var(--item-size) * 0.08) solid #cf0707;
+  border: calc(var(--item-size) * 0.08) solid $new-notification-dot;
   position: absolute;
   top: $item-border-width + 2px;
   right: $item-border-width + 2px;
