--- a/src/app/whats-new/WhatsNewLink.m.scss
+++ b/src/app/whats-new/WhatsNewLink.m.scss
@@ -1,14 +1,14 @@
 @use '../variables.scss' as *;
 
 .upgrade {
-  color: var(--theme-accent-primary) !important;
+  color: $new-notification-dot !important;
   font-size: 18px !important;
   margin-right: 4px;
 }
 
 .badgeNew {
   display: inline-block;
-  background-color: var(--theme-accent-primary);
+  background-color: $new-notification-dot;
   border-radius: 50%;
   height: 8px;
   width: 8px;
