--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -7,7 +7,7 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 @use 'variables.scss' as *;
 @use 'theme';
-@use 'theme-dark';
+@use 'theme-pyramid';
 @use 'theme-neomuna';
 @use 'theme-throneworld';
 @use 'theme-vexnet';
