Added new variable (+ colours) for redeemed records

--- a/src/app/_theme-neomuna.scss
+++ b/src/app/_theme-neomuna.scss
@@ -95,4 +95,7 @@
   // Organizer
   --theme-organizer-row-odd-bg: #2b5483;
   --theme-organizer-row-even-bg: #2e3d69;
+
+  // Records
+  --theme-record-redeemed: #ee77ef;
 }
