--- a/src/app/_theme-pyramid.scss
+++ b/src/app/_theme-pyramid.scss
@@ -93,4 +93,7 @@
   // Organizer
   --theme-organizer-row-odd-bg: #171717;
   --theme-organizer-row-even-bg: #2b2b2b;
+
+  // Records
+  --theme-record-redeemed: #c88861;
 }
