--- a/src/app/_theme-throneworld.scss
+++ b/src/app/_theme-throneworld.scss
@@ -84,4 +84,7 @@
   // Organizer
   --theme-organizer-row-odd-bg: #2c7c55;
   --theme-organizer-row-even-bg: #3c926c;
+
+  // Records
+  --theme-record-redeemed: #ecd610;
 }
