--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -84,4 +84,7 @@
   // Organizer
   --theme-organizer-row-odd-bg: #27263a;
   --theme-organizer-row-even-bg: #1d1c2b;
+
+  // Records
+  --theme-record-redeemed: #c4b578;
 }
