--- a/src/app/_theme-vexnet.scss
+++ b/src/app/_theme-vexnet.scss
@@ -93,4 +93,7 @@
   // Organizer
   --theme-organizer-row-odd-bg: #2b5483;
   --theme-organizer-row-even-bg: #2e3d69;
+
+  // Records
+  --theme-record-redeemed: #e9ec10;
 }
