Mastwork border rendering fix + colour tweak

--- a/src/app/_theme-europa.scss
+++ b/src/app/_theme-europa.scss
@@ -68,7 +68,7 @@
   --theme-item-polaroid-txt: black;
   --theme-item-polaroid-masterwork: #88cbed;
   --theme-item-polaroid-masterwork-txt: #000;
-  --theme-item-polaroid-masterwork-border: #40abb5;
+  --theme-item-polaroid-masterwork-border: #3fefff;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
 
