--- a/src/app/_theme-pyramid.scss
+++ b/src/app/_theme-pyramid.scss
@@ -68,7 +68,7 @@
   --theme-item-polaroid-txt: white;
   --theme-item-polaroid-masterwork: #d19b00;
   --theme-item-polaroid-masterwork-txt: #000;
-  --theme-item-polaroid-masterwork-border: #ae791e;
+  --theme-item-polaroid-masterwork-border: #e2761d;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
 
