--- a/src/app/_theme-vexnet.scss
+++ b/src/app/_theme-vexnet.scss
@@ -68,7 +68,7 @@
   --theme-item-polaroid-txt: black;
   --theme-item-polaroid-masterwork: #5ed12c;
   --theme-item-polaroid-masterwork-txt: #000;
-  --theme-item-polaroid-masterwork-border: #40abb5;
+  --theme-item-polaroid-masterwork-border: #d3c2ce;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
 
