--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -7,6 +7,7 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 @use 'variables.scss' as *;
 @use 'theme';
+@use 'theme-dimdark';
 @use 'theme-pyramid';
 @use 'theme-neomuna';
 @use 'theme-throneworld';
