added the official DIM orange as the primary

--- a/src/app/_theme-dimdark.scss
+++ b/src/app/_theme-dimdark.scss
@@ -1,7 +1,7 @@
 // Basic DIM dark Theme
 .theme-dimdark {
   // Base colours
-  --theme-accent-primary: var(--dim-brand); // Interaction styles (hover, active, focus)
+  --theme-accent-primary: #d56520; // Interaction styles (hover, active, focus)
   --theme-accent-secondary: #68a0b7; // Secondary interactions
 
   // Generic fills for modal backgrounds (see below)
