--- a/src/app/_theme-dimdark.scss
+++ b/src/app/_theme-dimdark.scss
@@ -13,6 +13,12 @@
   --theme-text-invert: #efefef;
   --theme-text-secondary: #aaa;
 
+  // Filters (see https://codepen.io/sosuke/pen/Pjoqqp)
+  --theme-filter-black-to-text: invert(94%) sepia(92%) saturate(3%) hue-rotate(295deg)
+    brightness(113%) contrast(87%);
+  --theme-filter-black-to-text-invert: invert(94%) sepia(92%) saturate(3%) hue-rotate(295deg)
+    brightness(113%) contrast(87%);
+
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.1);
   --theme-button-text: white;
