--- a/src/app/_theme-europa.scss
+++ b/src/app/_theme-europa.scss
@@ -18,6 +18,12 @@
   --theme-text-invert: #beeeff;
   --theme-text-secondary: #a9bcc3;
 
+  // Filters (see https://codepen.io/sosuke/pen/Pjoqqp)
+  --theme-filter-black-to-text: invert(94%) sepia(16%) saturate(114%) hue-rotate(162deg)
+    brightness(98%) contrast(98%);
+  --theme-filter-black-to-text-invert: invert(97%) sepia(99%) saturate(3511%) hue-rotate(172deg)
+    brightness(100%) contrast(111%);
+
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
   --theme-button-text: white;
