--- a/src/app/_theme-neomuna.scss
+++ b/src/app/_theme-neomuna.scss
@@ -20,6 +20,12 @@
   --theme-text-invert: #beeeff;
   --theme-text-secondary: #87adba;
 
+  // Filters (see https://codepen.io/sosuke/pen/Pjoqqp)
+  --theme-filter-black-to-text: invert(88%) sepia(13%) saturate(360%) hue-rotate(186deg)
+    brightness(109%) contrast(94%);
+  --theme-filter-black-to-text-invert: invert(85%) sepia(8%) saturate(1563%) hue-rotate(175deg)
+    brightness(105%) contrast(102%);
+
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
   --theme-button-text: white;
