--- a/src/app/_theme-pyramid.scss
+++ b/src/app/_theme-pyramid.scss
@@ -18,6 +18,11 @@
   --theme-text-invert: #fff;
   --theme-text-secondary: #777;
 
+  // Filters (see https://codepen.io/sosuke/pen/Pjoqqp)
+  --theme-filter-black-to-text: invert(80%) sepia(6%) saturate(12%) hue-rotate(323deg)
+    brightness(102%) contrast(91%);
+  --theme-filter-black-to-text-invert: invert(1);
+
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
   --theme-button-text: white;
