Added var: capped item polaroids

--- a/src/app/_theme-neomuna.scss
+++ b/src/app/_theme-neomuna.scss
@@ -71,6 +71,8 @@
   --theme-item-polaroid-masterwork: #db00aa;
   --theme-item-polaroid-masterwork-txt: #dec1d8;
   --theme-item-polaroid-masterwork-border: #40abb5;
+  --theme-item-polaroid-capped: #ebb920;
+  --theme-item-polaroid-capped-txt: #000;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
 
