--- a/src/app/_theme-europa.scss
+++ b/src/app/_theme-europa.scss
@@ -69,6 +69,8 @@
   --theme-item-polaroid-masterwork: #88cbed;
   --theme-item-polaroid-masterwork-txt: #000;
   --theme-item-polaroid-masterwork-border: #3fefff;
+  --theme-item-polaroid-capped: #f2a5ce;
+  --theme-item-polaroid-capped-txt: #be0a99;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
 
