--- a/src/app/_theme-pyramid.scss
+++ b/src/app/_theme-pyramid.scss
@@ -69,7 +69,9 @@
   --theme-item-polaroid-masterwork: #d19b00;
   --theme-item-polaroid-masterwork-txt: #000;
   --theme-item-polaroid-masterwork-border: #e2761d;
-  --theme-item-polaroid-godroll: white;
+  --theme-item-polaroid-capped: #f55656;
+  --theme-item-polaroid-capped-txt: #fff;
+  --theme-item-polaroid-godroll: #fff;
   --theme-item-polaroid-trashroll: #d14334;
 
   // Item popup
