--- a/src/app/_theme-vexnet.scss
+++ b/src/app/_theme-vexnet.scss
@@ -69,6 +69,8 @@
   --theme-item-polaroid-masterwork: #5ed12c;
   --theme-item-polaroid-masterwork-txt: #000;
   --theme-item-polaroid-masterwork-border: #d3c2ce;
+  --theme-item-polaroid-capped: #ffc4c4;
+  --theme-item-polaroid-capped-txt: #e54127;
   --theme-item-polaroid-godroll: white;
   --theme-item-polaroid-trashroll: #d14334;
 
