--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -65,6 +65,8 @@
   --theme-item-polaroid-masterwork: #eade8b;
   --theme-item-polaroid-masterwork-txt: var(--theme-text-invert);
   --theme-item-polaroid-masterwork-border: #ae791e;
+  --theme-item-polaroid-capped: #f5dc56;
+  --theme-item-polaroid-capped-txt: #f2721b;
   --theme-item-polaroid-godroll: #0b486b;
   --theme-item-polaroid-trashroll: #d14334;
 
