Tweak element icon brightness fix

--- a/src/app/_theme-dimdark.scss
+++ b/src/app/_theme-dimdark.scss
@@ -67,6 +67,7 @@
   --theme-item-polaroid-masterwork-border: #745700;
   --theme-item-polaroid-godroll: #efefef;
   --theme-item-polaroid-trashroll: #efefef;
+  --theme-item-polaroid-element-adjust-brightness: 100%; // Adjust brightness level of Arc, Strand, Void icons
 
   // Item popup
   --theme-item-popup-border: #222;
