Build black vault border into default styles

--- a/src/app/_theme-classic.scss
+++ b/src/app/_theme-classic.scss
@@ -17,7 +17,5 @@
   --theme-organizer-row-odd-bg: var(--theme-app-bg);
   --theme-organizer-row-even-bg: #252627;
 
-  .character.vault {
-    outline: 1px solid black;
-  }
+  --theme-search-bg: var(--theme-app-bg);
 }
