--- a/src/app/dim-ui/Select.m.scss
+++ b/src/app/dim-ui/Select.m.scss
@@ -14,7 +14,9 @@
   z-index: 100;
   position: absolute;
   &.open {
-    box-shadow: 0 0 0 1px var(--theme-item-popup-border), var(--theme-drop-shadow);
+    box-shadow:
+      0 0 0 1px var(--theme-item-popup-border),
+      var(--theme-drop-shadow);
   }
 }
 
