--- a/src/app/inventory-page/DesktopStores.m.scss
+++ b/src/app/inventory-page/DesktopStores.m.scss
@@ -13,7 +13,9 @@
   color: #9e9db5;
   font-size: 26px;
   width: min-content;
-  transition: transform 100ms ease-in-out, color 100ms ease-in-out;
+  transition:
+    transform 100ms ease-in-out,
+    color 100ms ease-in-out;
   display: flex;
   align-items: center;
 
