--- a/src/app/issue-awareness-banner/Game2Give.m.scss
+++ b/src/app/issue-awareness-banner/Game2Give.m.scss
@@ -71,7 +71,10 @@
     linear-gradient(to top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25)),
     linear-gradient(to left, #ac7b28, #e8a534);
   border-radius: 2px;
-  background-size: 35px 100%, 100% 100%, 100% 100%;
+  background-size:
+    35px 100%,
+    100% 100%,
+    100% 100%;
 }
 
 .goal {
