--- a/src/app/_theme-dimdark.scss
+++ b/src/app/_theme-dimdark.scss
@@ -15,7 +15,7 @@
 
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.1);
-  --theme-button-text: white;
+  --theme-button-text: var(--theme-text);
 
   // Input field (text boxes and text areas)
   --theme-input-bg: #333;
@@ -48,7 +48,7 @@
   --theme-header-nav-bg: var(--theme-app-bg-gradient);
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: var(--theme-app-bg-gradient);
-  --theme-header-characters-txt: #efefef;
+  --theme-header-characters-txt: var(--theme-text);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
@@ -60,13 +60,15 @@
 
   // Items
   --theme-item-polaroid: #000;
-  --theme-item-polaroid-txt: var(--theme-text-invert);
+  --theme-item-polaroid-txt: var(--theme-text);
   --theme-item-polaroid-hover-border: #ddd;
   --theme-item-polaroid-masterwork: #745700;
-  --theme-item-polaroid-masterwork-txt: var(--theme-text-invert);
+  --theme-item-polaroid-masterwork-txt: var(--theme-text);
   --theme-item-polaroid-masterwork-border: #745700;
-  --theme-item-polaroid-godroll: #efefef;
-  --theme-item-polaroid-trashroll: #efefef;
+  --theme-item-polaroid-capped: #745700;
+  --theme-item-polaroid-capped-txt: var(--theme-text);
+  --theme-item-polaroid-godroll: var(--theme-text);
+  --theme-item-polaroid-trashroll: var(--theme-text);
   --theme-item-polaroid-element-adjust-brightness: 100%; // Adjust brightness level of Arc, Strand, Void icons
 
   // Item popup
