Fix border colors on sockets with new variable

--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -69,7 +69,8 @@
   --theme-item-polaroid-capped-txt: #f2721b;
   --theme-item-polaroid-godroll: #0b486b;
   --theme-item-polaroid-trashroll: #d14334;
-  --theme-item-polaroid-element-adjust-brightness: 70%; // Adjust brightness level of Arc, Strand, Void icons
+  --theme-item-polaroid-element-adjust-brightness: 70%; // Adjust for legibility of Arc, Strand, Void icons
+  --theme-item-socket-border: #888; // Socketable slots (mods, fashion, sub-class/abilities)
 
   // Item popup
   --theme-item-popup-border: #222;
