--- a/src/app/inventory/InventoryItem.m.scss
+++ b/src/app/inventory/InventoryItem.m.scss
@@ -74,11 +74,17 @@
 
 // The container for the tag/notes/wishlist icons
 .icons {
+  width: var(--item-size);
+  height: var(--item-size);
+  max-width: 66%;
   position: absolute;
-  right: $item-border-width;
-  top: calc(var(--item-size) - #{$badge-height});
+  right: ($item-border-width * 3);
+  bottom: calc(#{$badge-height} + (#{$item-border-width} * 2));
+  padding-bottom: $item-border-width;
   display: flex;
-  flex-direction: row;
+  flex-flow: row-reverse wrap-reverse;
+  align-content: flex-start;
+  align-items: baseline;
 }
 
 // Individual icons in the icon tray
@@ -88,7 +94,8 @@
   width: calc(var(--item-size) / 5);
   height: calc(var(--item-size) / 5);
   font-size: calc(var(--item-size) / 5);
-  margin-right: 1px;
+  margin-left: 3px;
+  margin-top: 3px;
   color: #29f36a; // #5eff92;
   filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.8));
 }
