Mobile nav color variable + meta theme-color definition

--- a/src/app/_theme-europa.scss
+++ b/src/app/_theme-europa.scss
@@ -48,6 +48,7 @@
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
   --theme-pwa-background: #1d2b5e;
+  --theme-mobile-background: #1d2b5e;
 
   // Header
   --theme-header-nav-bg: #1d2b5e;
