--- a/src/app/_theme-neomuna.scss
+++ b/src/app/_theme-neomuna.scss
@@ -50,6 +50,7 @@
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
   --theme-pwa-background: #0b2432;
+  --theme-mobile-background: #0b2432;
 
   // Header
   --theme-header-nav-bg: #0b2432;
