--- a/src/app/_theme-vexnet.scss
+++ b/src/app/_theme-vexnet.scss
@@ -48,6 +48,7 @@
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
   --theme-pwa-background: #0d2f63;
+  --theme-mobile-background: #0d2f63;
 
   // Header
   --theme-header-nav-bg: #0d2f63;
