--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -43,6 +43,7 @@
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
   --theme-pwa-background: #202034;
+  --theme-mobile-background: #000;
 
   // Header
   --theme-header-nav-bg: var(--theme-app-bg-gradient);
