--- a/src/app/inventory-page/CategoryStrip.m.scss
+++ b/src/app/inventory-page/CategoryStrip.m.scss
@@ -2,7 +2,7 @@
 
 .options {
   display: flex;
-  background-color: black;
+  background-color: var(--theme-mobile-background);
   position: fixed;
   align-items: center;
   bottom: 0;
