Square off search dropdown on mobile

--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -42,6 +42,8 @@
     overflow-y: auto;
     overscroll-behavior: none;
     max-height: calc(var(--viewport-height) - var(--header-height)) !important;
+    box-shadow: none;
+    border-radius: 0;
   }
 }
 
