--- a/src/app/loadout/loadout-menu/LoadoutPopupRandomize.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopupRandomize.m.scss
@@ -2,3 +2,11 @@
   opacity: 0.6;
   margin: 8px 0 0 0;
 }
+
+.checkboxRow {
+  display: inline-block;
+
+  > * {
+    vertical-align: middle;
+  }
+}
