Switch upgrade notification icon back to orange

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -7,6 +7,7 @@ $green: #51a351; // For success statuses or positive deltas
 $stat-modded: #68a0b7; // For highlighting the difference in modded item stats
 $stat-masterworked: #e8a534;
 $new-notification-dot: #cf0707;
+$upgrade-notification-dot: #e8a534;
 
 // Blue used to denote community-provided data
 $communityBlue: #0d7fad;
