--- a/src/app/inventory/BadgeInfo.m.scss
+++ b/src/app/inventory/BadgeInfo.m.scss
@@ -33,6 +33,12 @@
   padding: 0 4px;
 }
 
+.shapedIcon {
+  width: calc((8 / 50) * var(--item-size));
+  height: calc((8 / 50) * var(--item-size));
+  margin-right: auto;
+}
+
 .quality {
   display: none;
   margin-right: auto;
