--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -325,6 +325,11 @@ $modslotSize: 30px;
   }
 }
 
+.shapedIcon {
+  width: calc((16 / 50) * var(--item-size));
+  height: calc((16 / 50) * var(--item-size));
+}
+
 .shapedIconOverlay {
   position: absolute;
   bottom: 1px;
