--- a/src/app/loadout/LoadoutView.m.scss
+++ b/src/app/loadout/LoadoutView.m.scss
@@ -10,9 +10,9 @@
   composes: flexRow from '../dim-ui/common.m.scss';
   align-items: center;
   user-select: text;
+  gap: 1em;
 
   h2 {
-    flex: 1;
     display: block;
     margin: 0 !important;
     font-size: 16px;
@@ -28,6 +28,7 @@
   composes: flexRow from '../dim-ui/common.m.scss';
   flex-flow: row wrap;
   gap: 4px;
+  margin-left: auto;
 
   @include phone-portrait {
     margin-top: 16px;
@@ -39,7 +40,6 @@
   text-transform: none;
   font-size: 12px;
   letter-spacing: normal;
-  margin-left: 1em;
   color: #ccc;
 
   :global(.app-icon) {
