--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -43,6 +43,9 @@ $gilded-triumph-border-color: #a78355;
 // Yellow used for enhanced weapon perks
 $enhancedYellow: #f3cf55;
 
+// The in-game color for the shaped weapon icon
+$shaped: #d25336;
+
 // Item tiles' border
 $item-border-width: 1px;
 
