--- a/src/app/dim-ui/DestinyTooltipText.m.scss
+++ b/src/app/dim-ui/DestinyTooltipText.m.scss
@@ -1,7 +1,12 @@
+@use '../variables.scss' as *;
+
 .shapedIcon {
   vertical-align: middle;
   margin-right: 0.5em;
   margin-bottom: 4px;
+  height: 12px;
+  width: 12px;
+  color: $shaped;
 }
 
 .seasonalExpiration {
