--- a/src/app/inventory/BadgeInfo.m.scss
+++ b/src/app/inventory/BadgeInfo.m.scss
@@ -37,6 +37,7 @@
   width: calc((8 / 50) * var(--item-size));
   height: calc((8 / 50) * var(--item-size));
   margin-right: auto;
+  color: var(--theme-item-shaped-icon);
 }
 
 .quality {
