--- a/src/app/inventory/ItemIcon.m.scss
+++ b/src/app/inventory/ItemIcon.m.scss
@@ -72,7 +72,7 @@ $commonBg: #366f42;
   left: $item-border-width;
 }
 .legendaryMasterwork {
-  box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.25);
   background:
     radial-gradient(ellipse at center bottom, rgba(255, 255, 255, 0.2), transparent 75%) center
       bottom,
@@ -88,7 +88,7 @@ $commonBg: #366f42;
 .exoticMasterwork {
   $light-stripe: rgba(255, 255, 255, 0.003);
   $dark-stripe: rgba(0, 0, 0, 0.025);
-  box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.15);
   background:
     linear-gradient(rgba(0, 0, 0, 0.3) 0%, transparent 20%),
     linear-gradient(
