--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -35,16 +35,16 @@ $xp: #5ea16a;
 $gold: #f5dc56;
 $power: $gold;
 
+// The in-game color for the shaped weapon icon
+$shaped: #d25336;
+
 // Color of the item border for masterworks
 $masterwork-border-color: #eade8b;
-$deepsight-border-color: #d25336;
+$deepsight-border-color: $shaped;
 $gilded-triumph-border-color: #a78355;
 
 // Yellow used for enhanced weapon perks
 $enhancedYellow: #f3cf55;
-
-// The in-game color for the shaped weapon icon
-$shaped: #d25336;
 
 // Item tiles' border
 $item-border-width: 1px;
