--- a/src/app/loadout-builder/filter/EnergyOptions.m.scss
+++ b/src/app/loadout-builder/filter/EnergyOptions.m.scss
@@ -1,14 +1,5 @@
 @use '../../variables' as *;
 
-.energyOptions {
-  margin: 8px 0;
-}
-
-.settingGroup {
-  background-color: black;
-  padding: 8px;
-}
-
 .title {
-  margin-bottom: 4px;
+  margin: 0;
 }
