Re-constrain store header

--- a/src/app/inventory-page/PhoneStoresHeader.m.scss
+++ b/src/app/inventory-page/PhoneStoresHeader.m.scss
@@ -1,5 +1,5 @@
 .frame {
-  max-width: calc(100% - 100px);
+  max-width: 253px;
   margin: 0 auto;
   overflow: visible !important;
   position: relative;
