Fix selector precedence on item popup header

--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -146,7 +146,7 @@
 }
 
 .itemPopup {
-  :global(.sheet-header) {
+  &:global(.sheet) :global(.sheet-header) {
     padding: 0;
     border: none;
   }
