Organizer: shift-click cell style now matches theme accent

--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -302,7 +302,7 @@ $modslotSize: 30px;
 .shiftHeld {
   .hasFilter {
     &:hover {
-      background-color: #999 !important;
+      background-color: var(--theme-accent-primary) !important;
       cursor: pointer;
     }
   }
