Swap grid for flexbox in perk options on organizer
Maybe fixes #9741

--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -201,7 +201,8 @@ $content-cells: 5;
 
 .modPerks {
   break-inside: avoid;
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: 4px;
   padding-left: 5px;
 }
