Show ingame icon wherever loadouts appear?

--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -82,6 +82,7 @@
       > :global(.app-icon),
       > img {
         width: 12px;
+        height: auto;
         margin-right: 5px;
         text-align: center;
 
@@ -201,4 +202,8 @@
     outline: 2px solid var(--theme-accent-primary);
   }
   display: block;
+}
+
+.loadoutIcon {
+  width: 16px !important;
 }
