--- a/src/app/loadout/LoadoutView.m.scss
+++ b/src/app/loadout/LoadoutView.m.scss
@@ -13,7 +13,9 @@
   gap: 1em;
 
   h2 {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
     margin: 0 !important;
     font-size: 16px;
   }
