--- a/src/app/dim-ui/CharacterSelect.m.scss
+++ b/src/app/dim-ui/CharacterSelect.m.scss
@@ -6,10 +6,10 @@
 }
 
 .tile {
-  height: 48px;
+  height: $emblem-height;
 
   @include phone-portrait {
-    min-width: 260px;
+    min-width: $emblem-width;
 
     > div {
       margin: 0 5px;
