--- a/src/app/character-tile/CharacterTile.m.scss
+++ b/src/app/character-tile/CharacterTile.m.scss
@@ -4,25 +4,35 @@
   flex: 1;
   display: flex;
   position: relative;
-  height: 48px;
-  max-width: 237px;
+  height: $emblem-height;
+  max-width: $emblem-width;
 }
 
 .background {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-size: 237px 48px;
+  background-size: $emblem-width $emblem-height;
   background-position: left center;
   background-repeat: no-repeat;
   background-color: black;
   z-index: -1;
   box-sizing: border-box;
-  :global(.vault) & {
+  .vault & {
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-right: none;
     background-size: cover;
   }
+}
+
+// The "current character" triangle
+.current::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top: 13px solid var(--theme-accent-primary);
+  border-right: 13px solid transparent;
 }
 
 .top,
@@ -51,7 +61,7 @@
   text-shadow: none;
 
   @include phone-portrait {
-    :global(.vault) & {
+    .vault & {
       display: grid;
       grid-template-columns: repeat(2, 16px minmax(min-content, 1fr));
       grid-auto-rows: 16px;
@@ -69,7 +79,7 @@
   flex-direction: column;
   margin: 0 6px;
 
-  :global(.vault) & {
+  .vault & {
     flex-direction: row;
     align-items: center;
     .top,
@@ -96,11 +106,11 @@
     margin-right: 15px;
   }
 
-  :global(.destiny2) & {
+  .destiny2 & {
     visibility: hidden;
   }
 
-  :global(.vault) & {
+  .vault & {
     visibility: visible;
     height: 40px;
     width: 40px;
