--- a/src/app/destiny1/activities/activities.scss
+++ b/src/app/destiny1/activities/activities.scss
@@ -1,3 +1,5 @@
+@use '../../variables.scss' as *;
+
 .activities {
   width: calc(
     (40px + var(--item-size) + (3 * (var(--item-size) + 8px))) * var(--num-characters) +
@@ -14,12 +16,13 @@
 
   .activities-character {
     flex-shrink: 0;
+    width: $emblem-width;
     display: flex;
     margin-right: 12px;
 
     .character {
-      height: 48px;
-      width: 220px;
+      height: $emblem-height;
+      width: $emblem-width;
     }
 
     &:last-child {
