Fix crushed popups

--- a/src/app/utils/temp-container.scss
+++ b/src/app/utils/temp-container.scss
@@ -5,6 +5,7 @@
   // document.
   position: absolute;
   top: 0;
+  width: 100%;
   // Make sure things in the temp container display above others
   z-index: 1000;
 }
