--- a/src/app/character-tile/CharacterTileButton.m.scss
+++ b/src/app/character-tile/CharacterTileButton.m.scss
@@ -21,7 +21,7 @@
         content: '';
         display: block;
         position: absolute;
-        inset: -4px -4px -4px -4px;
+        inset: -4px;
         border: 1px solid white;
         pointer-events: none;
       }
