Replace loadout optimizer mods/subclass sections

--- a/src/app/loadout-builder/filter/LoadoutOptimizerMenuItems.m.scss
+++ b/src/app/loadout-builder/filter/LoadoutOptimizerMenuItems.m.scss
@@ -21,7 +21,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   composes: flexColumn from '../../dim-ui/common.m.scss';
   gap: 4px;
-  font-size: 12px;
+  font-size: 12px; // reset from where PageWithMenu sets it to 14px
 }
 
 .buttons {
