--- a/src/app/loadout-builder/LoadoutBuilder.m.scss
+++ b/src/app/loadout-builder/LoadoutBuilder.m.scss
@@ -96,3 +96,21 @@
   display: inline;
   margin-left: 1em;
 }
+
+// Style for sections borrowed from LoadoutEdit
+.loadoutEditSection {
+  font-size: 12px; // reset from where PageWithMenu sets it to 14px
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 8px;
+  gap: 0;
+  // Fit 5 mods across, regardless of what the user's item size is
+  --item-size: 47px;
+  --loadout-edit-subclass-columns: 4;
+}
+
+.buttons {
+  display: flex;
+  flex-flow: row wrap;
+  margin-top: 8px;
+  gap: 4px;
+}
